kube-manifest/base/deployment-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vintage-arcade
  labels:
    app: vintage-arcade
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vintage-arcade
  template:
    metadata:
      labels:
        app: vintage-arcade
    spec:
      containers:
        - name: arcade
          image: iamzee007/static-game-homepage:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
