kube-manifest/base/service-home.yaml
apiVersion: v1
kind: Service
metadata:
  name: vintage-arcade-service
spec:
  selector:
    app: vintage-arcade
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
