kube-manifest/base/service-tetris.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
spec:
  ports:
    - port: 8900
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: app
