kube-manifest/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vintage-arcade-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: vintage-games.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vintage-arcade-service
                port:
                  number: 80
